style.css
/*
Theme name: Teleogistic
Template: twentytwelve
*/

@import url('../twentytwelve/style.css');

body {
	background: #0b4a65;
}

h1,
h2,
h3,
h4 {
	font-family: "Quando", serif;
}

a.bbg-links {
	display: block;
	text-indent: -999em;
	height: 75px;
	width: 75px;
	float: left;
}
	#bbg-twitter {
		background: url('img/twitter.png') no-repeat;
	}
	#bbg-wordpress {
		background: url('img/wordpress.png') no-repeat;
	}
	#bbg-github {
		background: url('img/github.png') no-repeat;
	}

.site-header {
	overflow: hidden;
	clear: both;
}
.site-header hgroup {
	width: 400px;
	float: left;
}

.main-navigation {
	float: right;
	margin-top: 0;
}
.main-navigation li:last-child {
	margin-right: 0;
}

@media screen and (max-width: 600px) {
	.main-navigation {
		float: none;
	}
	.site-header hgroup {
		margin: 0 auto;
		float: none;
		margin-bottom: 20px;
	}
}

#main {
	border-top: 1px solid #ededed;
}

.title-meta {
	margin: 10px 0;
	font-size: .9em;
}
.title-meta a,
.entry-meta a,
.widget-area .widget a,
.main-navigation li a {
	color: #b88346;
	text-decoration: none;
}
	.title-meta a:hover,
	.title-meta a:active,
	.entry-meta a:hover,
	.entry-meta a:active {
		color: #444;
	}

.widget ul {
	list-style-type: circle;
}
.widget li {
	margin-left: 16px;
}

